--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <div class="text1">
             <h4>Gather</h4>
             <p>A conceptual app designed to make recipe curation and meal prep easier and enjoyable for people with allergies and dietary restrictions.</p>
+            <a href="https://cristinkelly.github.io/UX_UI_HW_20/">
             <button>Learn More</button>
+        </a>
         </div>
         
         <div class="img2">
