--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="imagecontainer1 logo">
-                <img src="images/images/Plain_Logo.png">
+                <img src="/images/Plain_Logo.png">
             </div>
             <nav class="imagecontainer1">
                 <ul>
@@ -39,17 +39,17 @@
             <h1>My UX Skills</h1>
             <div class="flexcontainer">
                 <div>
-                    <img src="images/images/research.png">
+                    <img src="/images/research.png">
                     <h3>User Research</h3>
                     <p>From designing probing questions to conducting interviews and analyzing trends, this girl can do it all.</p>
                 </div>
                 <div>
-                    <img src="images/images/U!.png">
+                    <img src="/images/U!.png">
                     <h3>Interface Design</h3>
                     <p>Color Palettes, Usability testing, Card sorting - I have multiple skills to help design the most usable product possible.</p>
                 </div>
                 <div>
-                    <img src="images/images/coding.png">
+                    <img src="/images/coding.png">
                     <h3>Web Development</h3>
                     <p>A learning process real time! Basic coding skills in html, GSS, Java Script, JQuery, and Bootstrap.</p>
                 </div>
@@ -61,7 +61,7 @@
     <div class="workgrid">
 
         <div class="img1">
-            <img src="images/images/Dairy Free.png">
+            <img src="/images/Dairy Free.png">
         </div>
         <div class="text1">
             <h4>Gather</h4>
@@ -72,7 +72,7 @@
         </div>
         
         <div class="img2">
-            <img src="images/images/Screen Shot 2023-04-06 at 10.56.18 AM.png">
+            <img src="/images/Screen Shot 2023-04-06 at 10.56.18 AM.png">
         </div>
         <div class="text2">
             <h4>Stonewall Columbus Site Redesign</h4>
